--- a/css/main.css
+++ b/css/main.css
@@ -1,83 +1,29 @@
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
+/*---------------------------------------------*/
 
-@font-face {
-    font-family: Poppins-Regular;
-    src: url('../fonts/poppins/Poppins-Regular.ttf');
+.vendorback {
+    background-image: url(../images/vendor_form3.png);
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-size:100% auto;
+
 }
 
-@font-face {
-    font-family: Poppins-Medium;
-    src: url('../fonts/poppins/Poppins-Medium.ttf');
-}
-
-@font-face {
-    font-family: Poppins-Bold;
-    src: url('../fonts/poppins/Poppins-Bold.ttf');
-}
-
-@font-face {
-    font-family: Poppins-SemiBold;
-    src: url('../fonts/poppins/Poppins-SemiBold.ttf');
-}
-
-@font-face {
-    font-family: Montserrat-Bold;
-    src: url('../fonts/montserrat/Montserrat-Bold.ttf');
-}
-
-
-/*//////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
-
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-body,
-html {
-    height: 100%;
-    font-family: Poppins-Regular, sans-serif;
+.formblock.col-md-6.container {
+    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-right: 70px;
+    padding-left: 70px;
 }
 
 /*---------------------------------------------*/
-a {
-    font-family: Poppins-Regular;
-    font-size: 14px;
-    line-height: 1.7;
-    color: #666666;
-    margin: 0px;
-    transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-}
 
-a:focus {
-    outline: none !important;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-/*---------------------------------------------*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0px;
-}
 
 p {
-    font-family: Poppins-Regular;
+
     font-size: 14px;
     line-height: 1.7;
-    color: #666666;
+
     margin: 0px;
 }
 
@@ -189,28 +135,26 @@ iframe {
 /*==================================================================
 [ Text ]*/
 .txt1 {
-    font-family: Poppins-Regular;
+
     font-size: 18px;
     line-height: 1.2;
     color: #fff;
 }
 
 .txt2 {
-    font-family: Poppins-Regular;
-    font-size: 15px;
+    Montserrat font-size: 15px;
     line-height: 1.6;
     color: #999999;
 }
 
 .txt3 {
-    font-family: Poppins-Regular;
-    font-size: 15px;
+    Montserrat font-size: 15px;
     line-height: 1.6;
     color: #00ad5f;
 }
 
 .vendorterm {
-  color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 /*==================================================================
@@ -240,7 +184,7 @@ iframe {
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #ea9b9b;
+    background: #B52421;
 
 }
 
@@ -261,9 +205,10 @@ iframe {
 
 
 .vendorleftblock {
-  padding-top: 35px;
+    padding-top: 35px;
 
 }
+
 /*==================================================================
 [ Contact more ]*/
 .contact100-more {
@@ -290,60 +235,38 @@ iframe {
 }
 
 .terms {
-  margin-top: 35px;
+    margin-top: 35px;
 }
 
 .vendorbanner {
-  background-image: url('../images/vendor_head.png');
-  background-image: no-repeat;
+    background-image: url('../images/vendor_head.png');
+    background-image: no-repeat;
 
 }
 
 .vthone {
-  padding-top: 30px;
-  color: #000000;
+    padding-top: 45px;
+    color: #000000;
 }
 
 .vptext {
-  padding-bottom: 20px;
-  padding-top: 0px;
+    padding-bottom: 20px;
+    padding-top: 0px;
 }
 
 /*==================================================================
 [ Form ]*/
 
-.contact100-form {
-    width: 50%;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 56px 55px 63px 55px;
-}
+.contact100-form {}
 
-.contact100-form-title {
-    width: 100%;
-    display: block;
-    font-family: Poppins-Regular;
-    font-size: 30px;
-    color: #333333;
-    line-height: 1.2;
-    text-align: center;
-    padding-bottom: 33px;
-}
+.contact100-form-title {}
 
 
 
 /*------------------------------------------------------------------
 [ Input ]*/
 
-.wrap-input100 {
-    width: 100%;
-    position: relative;
- 
-}
+.wrap-input100 {}
 
 .rs1-wrap-input100,
 .rs2-wrap-input100 {
@@ -355,13 +278,12 @@ iframe {
 }
 
 .label-input100 {
-    font-family: Poppins-Regular;
-    font-size: 12px;
-    color: #000;
+    Montserrat font-size: 12px;
+    color: #ffffff;
     line-height: 1.5;
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: 1px;
-  
+
 
     display: -webkit-box;
     display: -webkit-flex;
@@ -380,9 +302,8 @@ iframe {
 .input100 {
     display: block;
     width: 100%;
-    background: transparent;
-    font-family: Poppins-Regular;
-    font-size: 14px;
+    background: #ffffff;
+    Montserrat font-size: 14px;
     color: #666666;
     line-height: 1.2;
     padding: 0 25px;
@@ -416,16 +337,13 @@ textarea.input100 {
     visibility: hidden;
     opacity: 0;
 
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
 
-    -webkit-transform: scaleX(1.1) scaleY(1.3);
+
+    /*-webkit-transform: scaleX(1.1) scaleY(1.3);
     -moz-transform: scaleX(1.1) scaleY(1.3);
     -ms-transform: scaleX(1.1) scaleY(1.3);
     -o-transform: scaleX(1.1) scaleY(1.3);
-    transform: scaleX(1.1) scaleY(1.3);
+    transform: scaleX(1.1) scaleY(1.3);*/
 }
 
 .input100:focus+.focus-input100 {
@@ -451,7 +369,6 @@ textarea.input100 {
     display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     padding-top: 23px;
 }
 
@@ -468,18 +385,17 @@ textarea.input100 {
     height: 50px;
     border-radius: 2px;
     background: #b92122;
-
-    font-family: Montserrat-Bold;
-    font-size: 12px;
+    font-size: 17px;
     color: #fff;
     line-height: 1.2;
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: 1px;
 
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
     -moz-transition: all 0.4s;
     transition: all 0.4s;
+    border-radius: 10px;
 }
 
 .contact100-form-btn:hover {
@@ -596,4 +512,27 @@ textarea.input100 {
         visibility: visible;
         opacity: 1;
     }
+}
+
+.validate_eror {
+    color: #F00;
+}
+
+.terms h4 {
+    margin-left: 39px;
+    margin-bottom: 5px;
+}
+
+.terms p {
+    margin-left: 43px;
+    margin-bottom: 17px;
+}
+
+.text-dark li {
+    line-height: 30px;
+}
+
+.vptext {
+    font-size: 20px;
+    font-weight: bold;
 }
